--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             </div>
            
         </div>
+        <div class="otherinfo">
+            <p>Seeking a challenging oppurtunity where I will be able to utilize my organizational skills and ability to work with people which will allow me to grow personally and professionally.</p>
+        </div>
         <br>
         <br>
         <div class="heading-tag">
