--- a/education.html
+++ b/education.html
@@ -25,7 +25,7 @@
             <a href="education.html">Education</a>
         </div>
         <div class="links">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
         </div>
        
     </div>
