--- a/education.html
+++ b/education.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="education.css" media="screen" type="text/css">
-    <title>Document</title>
+    <title>Education</title>
 </head>
 <body>
     <div class="header">
-        <img src="../images/cocacola.png" class="logo" alt="LOGO">
+        <img src="cocacola.png" class="logo" alt="LOGO">
         <div class="dropdown">
             <button class="dropbtn"><h3>Skills</h3></button>
             <div class="dropdown-content">
@@ -31,7 +31,7 @@
     </div>
    <div class="main-content">
         <div class="content">
-            <img src="../images/Imrankhan.jpg" alt="Profile Image" class="profile-picture">
+            <img src="Imrankhan.jpg" alt="Profile Image" class="profile-picture">
             <div class="name-email">
                 <h4>Name:  <span class="credentials">Prabhjot Kaur</span></h4>
                 <hr>
@@ -103,12 +103,13 @@
         <br>
         <br>
     </div>
+       </div>
    <div class="footer">
     <ul>
         <li class="source-name" style="display: block;"><h2>Provided by ABC</h2></li>
-        <li class="links" style="display: block; float: right;"><a> <img src="../images/instagram-logo-svg-vector-for-print.svg" ></a></li>
-        <li class="links" style="display: block; float: right;"> <a></a><img src="../images/768px-LinkedIn_logo_initials.png" ></a></li>
-        <li class="links" style="display: block; float: right;"> <a></a><img src="../images/Facebook_icon_2013.svg.png" ></a></li>
+        <li class="links" style="display: block; float: right;"><a> <img src="instagram-logo-svg-vector-for-print.svg" ></a></li>
+        <li class="links" style="display: block; float: right;"> <a></a><img src="768px-LinkedIn_logo_initials.png" ></a></li>
+        <li class="links" style="display: block; float: right;"> <a></a><img src="Facebook_icon_2013.svg.png" ></a></li>
     </ul>
     <br>
     <br>
