--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="education.html">Education</a>
         </div>
         <div class="links">
-            <a href="index.html">Home</a>
+            <a href="index.html" class="active">Home</a>
         </div>
        
     </div>
