--- a/education.html
+++ b/education.html
@@ -22,7 +22,7 @@
             <a href="#">Contact</a>
         </div>
         <div class="links">
-            <a href="education.html">Education</a>
+            <a href="education.html" class="active">Education</a>
         </div>
         <div class="links">
             <a href="index.html">Home</a>
